<resources>
    <string name="app_name">WeightCard</string>
    <string name="field_must_not_be_empty">Must not be empty</string>
    <string name="edit">Edit</string>
    <string name="title_main_screen">Main Screen</string>
    <string name="search">Search</string>
    <string name="delete_items">Delete Items</string>
    <string name="delete_items_message">Are you sure you want to remove that items?</string>
    <string name="accept">Yes</string>
    <string name="cancel">No</string>
    <string name="kg">KG</string>
    <string name="lb">LB</string>
    <string name="photo_name_1">Photo</string>
    <string name="press_capture_to_start">Press capture or select from galary</string>
    <string name="birthday">Birthday</string>
    <string name="weight">Weight</string>
    <string name="photo">photo</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="add_client">ADD CLIENT</string>
    <string name="title_birthday">Select Date of Birth</string>
    <string name="title_photo">Photo</string>
    <string name="title_weight">Enter Body Weight</string>
</resources>